fix(mobile): smaller margin-bottom on iphone 5

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -827,5 +827,9 @@ Parallax
 @media (max-width:320px) {
     .section-heading h2 {
         font-size: 20px;
+        margin-bottom: 15px;
+    }
+    .section-heading i {
+        margin-bottom: 10px;
     }
 }
